# Lifeform-Simulation

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Report1.docx  Scheme.pdn  build.ninja  canvas.cpp  canvas.h  cmake_install.cmake  main.cpp  qtcsettings.cmake  random.cpp  random.h  selectwindow.cpp  selectwindow.h  simplewindow.cpp  simplewindow.h  simulation.cpp  simulation.h
.cmake/api/v1/reply/: cache-v2-57371cd4f70bc6532592.json  cmakeFiles-v1-232bae1e3782fc108af6.json  codemodel-v2-7a9912ce92f53c3e6aca.json  directory-.-Debug-9d84c6a4e749e80d45be.json  index-2025-03-15T15-26-45-0459.json  target-LifeForm_Simulation-Debug-710832d89a71fb2fe085.json  target-LifeForm_Simulation_autogen-Debug-bc34504e5d0140aab050.json  target-LifeForm_Simulation_autogen_timestamp_deps-Debug-1b2365d773d60b75ebb7.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/.cache/clangd/index/: QComboBox.8A91A6E0D8EED1CE.idx  QDialog.2C978B7C730C6216.idx  QLabel.A01AAABF800A5E2F.idx  QLineEdit.1EFE8149649D8C43.idx  QMessageBox.465E2F116B1BD5FC.idx  QPainter.819BF270D98908B7.idx  QPointF.6FFACCD0F23708DD.idx  QRegularExpression.38951FD4EB4C9A1C.idx  QVBoxLayout.CF6EC1AED2E2B40A.idx  QWidget.2212F9C3FC804005.idx  __stdarg___va_copy.h.EBA4BCA6B52CB416.idx  __stdarg_header_macro.h.0AC62E3BD552804E.idx  __stdarg_va_list.h.A265A0ED6FB8E529.idx  __stddef_header_macro.h.38FE47040F7F3465.idx  __stddef_null.h.610D5CCD00C977B1.idx  __stddef_wint_t.h.CC52C3BE0F597664.idx  _mingw_ddk.h.D73A2B39E463094E.idx  alloc_traits.h.4FF2BFB9551F7E83.idx  alloc_traits.h.60920591965972DC.idx  array.F99DC2114E077DBA.idx  assertions.h.5C61F403C574BBB7.idx  atomic.1ADFC9EC9DEB6FA2.idx  atomic_base.h.2F1DADA35B57D0BD.idx  bacteria.cpp.C4C54C6B8410FB0F.idx  bacteria.h.ECE45A7578DE5CD6.idx  basic_string.tcc.3B087258954A2EA1.idx  binders.h.B2D64C9BB5B96C48.idx  bit.183D8F1FF55C9012.idx  c++allocator.h.70D652F9ECD81E36.idx  c++config.h.E57CBB858D2241E8.idx  canvas.cpp.5DA926FF0284BF90.idx  canvas.h.E498AAC7C5B3A1A1.idx  cassert.DD8C46935ECA34B9.idx  cerrno.E20FED2EE7256C90.idx  char_traits.h.7A7F0E0A9527395A.idx  clocale.EB69053B3C513F68.idx  cmath.255BF1E854B88D8B.idx  compare.9ACFC3E770E7D7EB.idx  cstddef.806AC306BEB69D11.idx  cstdlib.8F374D25FEF09536.idx  (+186 more)
LifeForm_Simulation_autogen/: deps  mocs_compilation.cpp
LifeForm_Simulation_autogen/EWIEGA46WW/: moc_canvas.cpp.d  moc_selectwindow.cpp.d  moc_simplewindow.cpp.d
lifeforms/: bacteria.cpp  bacteria.h  lifeform.cpp  lifeform.h  lifeformcollection.cpp  lifeformcollection.h  magicbacteria.cpp  magicbacteria.h  nanorobot.cpp  nanorobot.h  photobacteria.cpp  photobacteria.h  virus.cpp  virus.h
